March 2020 7.1
  - PHP 7 required
  - Webauthn/FIDO2 support for 2-factor-authentication (requires PHP 7.2)
  - Personal: support display name (hidden by default in server profile)
  - LAM Pro:
   -> PPolicy: support for password check module
   -> Windows AD LDS support (users and groups)

21.12.2019 7.0
  - Lamdaemon can be configured with directory prefix for homedirs
  - Account list filters match on substrings instead of whole value
  - YubiKey: support to configure multiple verification servers
  - Windows hosts: added last password change and last login
  - Deactivated non-maintained translations: Catalan, Czech, Hungarian, Polish and Turkish
    Contact us if you would like to take over. Translators get LAM Pro for free (commercial use included).
  - Docker updates
  - Fixed bugs:
   -> Missing CSS for Duo
   -> Editing of DNs with comma on Windows (210)


29.09.2019 6.9
  - Group account types can show member+owner count in list view
  - 2-factor authentication:
   -> Duo support
   -> user name attribute for privacyIDEA can be specified
  - LAM Pro:
   -> New self service settings for login and main page footer
   -> Custom fields: custom labels for LDAP search select list
  - Fixed bugs:
   -> Configuration issue with Unix user/host module (206)


02.07.2019 6.8
  - Parallel editing of multiple entries in different browser tabs supported
  - LAM supports the progressive web app standard which allows to install LAM as an icon on home screen
  - Windows: added home drive and force password change to profile editor
  - Unix: password management can be disabled in module settings
  - LAM Pro:
   -> Bind DLZ: entry table can show record data (use special attribute "#records" in server profile)
   -> Self service: support legacy attribute "email" for password self reset and user self registration
  - Fixed bugs:
   -> Users: No drop-down filter box for account status (200)
   -> Custom fields: Account type "Groups" not saving/deleting fields (66)

